Refactor LexerTest: improved readability